# porkbun

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-25-porkbun-cli.md
docs/superpowers/specs/: 2026-03-25-porkbun-cli-design.md
porkbun/: Cargo.toml
porkbun-lib/: Cargo.toml
porkbun-lib/src/: client.rs  config.rs
porkbun-lib/src/models/: dns.rs  dnssec.rs  domain.rs  glue.rs  mod.rs  pricing.rs  ssl.rs  url_forward.rs
porkbun/src/: main.rs  output.rs
porkbun/src/cmd/: dns.rs  dnssec.rs  domains.rs  glue.rs  mod.rs  ping.rs  pricing.rs  ssl.rs  url_forward.rs
porkbun/tests/: dns_test.rs  dnssec_test.rs  domains_test.rs  glue_test.rs  live_test.rs  ping_test.rs  pricing_test.rs  ssl_test.rs  url_forward_test.rs
porkbun/tests/common/: mod.rs
porkbun/tests/fixtures/: dns_create.json  dns_retrieve.json  dnssec_list.json  domain_check.json  domain_create.json  domain_get_ns.json  domain_update_auto_renew.json  domains_list.json  glue_list.json  ping.json  pricing_get.json  ssl_retrieve.json  url_forward_list.json
