[package]
name = "porkbun-lib"
version = "1.0.1"
edition = "2021"
description = "Rust client library for the Porkbun domain registrar API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orangerabbit-io/porkbun"
homepage = "https://github.com/orangerabbit-io/porkbun"
readme = "../README.md"
keywords = ["porkbun", "dns", "domain", "api", "client"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
toml = "0.8"

[dev-dependencies]
serial_test = "3"
