[package]
name = "porkbun"
version = "1.0.1"
edition = "2021"
description = "Command-line interface for the Porkbun domain registrar API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orangerabbit-io/porkbun"
homepage = "https://github.com/orangerabbit-io/porkbun"
readme = "../README.md"
keywords = ["porkbun", "dns", "domain", "cli", "registrar"]
categories = ["command-line-utilities"]

[dependencies]
porkbun-lib = { path = "../porkbun-lib" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tabled = "0.17"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
serial_test = "3"
